force/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <description>The hierarchical campaign category aligned with consumer life cycle stage.</description>
        <label>Campaign Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Loss Prevention</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Labels__c</fullName>
        <inlineHelpText>Labels for Campaign Name, Segment Name and/or Age Category</inlineHelpText>
        <label>Campaign Labels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge Pre Term</fullName>
                </value>
                <value>
                    <fullName>Bridge Former</fullName>
                </value>
                <value>
                    <fullName>Utilize All</fullName>
                </value>
                <value>
                    <fullName>Utilize Not In Window</fullName>
                </value>
                <value>
                    <fullName>Utilize In Window</fullName>
                </value>
                <value>
                    <fullName>Non Utilize All</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>2 Year Plan</fullName>
                </value>
                <value>
                    <fullName>Client Partner</fullName>
                </value>
                <value>
                    <fullName>65 Up</fullName>
                </value>
                <value>
                    <fullName>55-64</fullName>
                </value>
                <value>
                    <fullName>35-54</fullName>
                </value>
                <value>
                    <fullName>26-34</fullName>
                </value>
                <value>
                    <fullName>25 Under</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing Event</fullName>
                </value>
                <value>
                    <fullName>Advertisement – Print</fullName>
                </value>
                <value>
                    <fullName>Advertisement – Digital</fullName>
                </value>
                <value>
                    <fullName>Community Outreach</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Plan and Policy Changes</fullName>
                </value>
                <value>
                    <fullName>Disaster Relief</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mobile Push</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Print</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Digital</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Facebook Digital</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Instagram Digital</fullName>
                </value>
                <value>
                    <fullName>Advertisement - YouTube Preroll</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Twitter Digital</fullName>
                </value>
                <value>
                    <fullName>Advertisement - General Preroll</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Other</fullName>
                </value>
                <value>
                    <fullName>Social Media - Facebook</fullName>
                </value>
                <value>
                    <fullName>Social Media - Instagram</fullName>
                </value>
                <value>
                    <fullName>Social Media - YouTube</fullName>
                </value>
                <value>
                    <fullName>Social Media - Twitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSP Global</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Altair</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <label>Product/Service</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Active_D2C_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.D2C_Campaign</value>
        </filters>
        <label>All Active D2C Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_D2C_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.D2C_Campaign</value>
        </filters>
        <label>All D2C Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Barb_s_Altair_Campaigns</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Product_Service__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>Salesforce_ID__c</columns>
        <columns>Campaign_Category__c</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>MA,AL</value>
        </filters>
        <label>Barb&apos;s Altair Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>D2C_Campaign</fullName>
        <active>true</active>
        <description>Campaigns executed to support the Direct-to-Consumer Marketing Effort</description>
        <label>D2C Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eloqua_Campaign</fullName>
        <active>true</active>
        <description>Campaigns created on Eloqua platform</description>
        <label>Eloqua Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSP_Campaign</fullName>
        <active>true</active>
        <description>Campaigns created and executed in Salesforce</description>
        <label>VSP Campaign</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>